(qol) Removed image upload, and added proper auth.
